--- a/module/Admin/view/admin/admin/checkouts.phtml
+++ b/module/Admin/view/admin/admin/checkouts.phtml
@@ -19,9 +19,9 @@
     <?php } ?>
 </div>
 
-<div class="promotion-body-block_9">
+<div class="body-block_7">
     <a href="<?= $this->url('admin', array('action' => 'index')) ?>">
-        <div class="promotion-body-button_order">Назад</div>
+        <div class="body-button">Назад</div>
     </a>
 </div>
 
