--- a/module/Admin/view/admin/admin/portfolios.phtml
+++ b/module/Admin/view/admin/admin/portfolios.phtml
@@ -75,6 +75,7 @@
                     success: function (response) {
                         if (response && response.status === 'ok') {
                             item.remove();
+                            portfolioSlider.reloadSlider();
                         }
                     }
                 });
