--- a/module/Admin/view/admin/admin/users.phtml
+++ b/module/Admin/view/admin/admin/users.phtml
@@ -40,9 +40,9 @@ echo $this->form()->openTag($form);
 
 <?php echo $this->form()->closeTag() ?>
 
-<div class="promotion-body-block_9">
+<div class="body-block_7">
     <a href="<?= $this->url('admin', array('action' => 'index')) ?>">
-        <div class="promotion-body-button_order">Назад</div>
+        <div class="body-button">Назад</div>
     </a>
 </div>
 
