--- a/module/Page/view/page/page/marketing.phtml
+++ b/module/Page/view/page/page/marketing.phtml
@@ -67,7 +67,9 @@
     <a href="<?= $this->url('page', array('action' => 'checkout')) ?>">
         <div class="body-button">ОФОРМИТЬ ЗАКАЗ</div>
     </a>
+    <a href="<?= $this->url('page', array('action' => 'contacts')) ?>">
     <div class="body-button">РАСЧИТАТЬ ЦЕНУ</div>
+    </a>
 </div>
 
 <script>
