--- a/module/Page/view/page/page/pr.phtml
+++ b/module/Page/view/page/page/pr.phtml
@@ -63,6 +63,8 @@
     <a href="<?= $this->url('page', array('action' => 'checkout')) ?>">
         <div class="body-button">ОФОРМИТЬ ЗАКАЗ</div>
     </a>
+    <a href="<?= $this->url('page', array('action' => 'contacts')) ?>">
     <div class="body-button">РАСЧИТАТЬ ЦЕНУ</div>
+    </a>
     <div class="body-button">АНАЛИЗ САЙТА</div>
 </div>
