--- a/module/Page/view/page/page/promotion.phtml
+++ b/module/Page/view/page/page/promotion.phtml
@@ -84,9 +84,11 @@
 
 <div class="body-block_7 magrin_top_20">
     <a href="<?= $this->url('page', array('action' => 'checkout')) ?>">
-        <div class="body-button">ОФОРМИТЬ ЗАКАЗ</div>
+        <div class="body-button">ТАРИФНЫЕ ПЛАНЫ</div>
     </a>
+    <a href="<?= $this->url('page', array('action' => 'contacts')) ?>">
     <div class="body-button">РАСЧИТАТЬ ЦЕНУ</div>
+    </a>
     <div class="body-button">АНАЛИЗ САЙТА</div>
 </div>
 
