--- a/module/Page/view/page/page/brend.phtml
+++ b/module/Page/view/page/page/brend.phtml
@@ -47,7 +47,7 @@
 
 <div class="body-block_4 magrin_top_20">В каких случаях наиболее эффективно заказывать<br/>медийную рекламу в Интернете?</div>
 
-<ul class="body-ul_1 body-background body-color magrin_top_10">
+<ul class="body-ul_1 body-background2 magrin_top_10">
     <li>Медийная реклама необходима молодым компаниям, чей бренд пока малоизвестен</li>
     <li>Она исключительно эффективна, когда надо повысить имидж бренда</li>
     <li>Баннерная реклама – это способ прямого воздействия на покупателя с целью побуждения его к покупке</li>
@@ -55,7 +55,7 @@
 
 <div class="body-block_1 magrin_top_20">Наша компания раскрутит Ваш бренд и сделает его известным<br/>широкой аудитории. <span class="body-color">Что это дает?</span></div>
 
-<div class="body-block_6 body-background body-color magrin_top_20">
+<div class="body-block_6 body-background2 magrin_top_20">
     Количество людей, готовых купить Ваш товар или услугу, увеличивается с каждым показом баннера
 </div>
 
@@ -81,7 +81,7 @@
     </div>
 </div>
 
-<div class="body-block_1 body-background magrin_top_20">
+<div class="body-block_1 body-background2 magrin_top_20">
     Вы можете заказать раскрутку бренда «под ключ» или выбрать<br/>только те услуги, которые Вам нужны. 
 </div>
 
