--- a/module/Page/view/page/page/fast-sales.phtml
+++ b/module/Page/view/page/page/fast-sales.phtml
@@ -75,11 +75,8 @@
     «Азбука Mediagroup» – Ваш выбор!<br/>
 </div>
 
-<div class="body-line magrin_top_10"></div>
-
-<div class="body-block_3 magrin_top_10">
-    Звоните нам!<br/>
-    Пишите нам!
+<div class="separator-line">
+    <div class="separator"></div>
 </div>
 
 <div class="body-block_7 magrin_top_20">
