--- a/module/Page/view/page/page/m-research.phtml
+++ b/module/Page/view/page/page/m-research.phtml
@@ -36,7 +36,9 @@
     конкурентам и т.д.
 </div>
 
-<div class="body-line magrin_top_10"></div>
+<div class="separator-line">
+    <div class="separator"></div>
+</div>
 
 <div class="body-block_3 magrin_top_20">
     Что предлагаем мы:
@@ -84,7 +86,9 @@
     Вашего бизнеса
 </div>
 
-<div class="body-line magrin_top_10"></div>
+<div class="separator-line">
+    <div class="separator"></div>
+</div>
 
 <div class="body-block_7 magrin_top_20">
     <a href="<?= $this->url('page', array('action' => 'checkout')) ?>">
