--- a/module/Page/view/page/page/services.phtml
+++ b/module/Page/view/page/page/services.phtml
@@ -77,7 +77,7 @@
         //first show
         $('.navi_2').css('height', '0');
         $('.tabs_' + $('.navi_1').find('.services-table-content-navigation_item').data('id')).show();
-        $('.services-table-content-navigation_item:first-of-type').addClass('navigation-active');
+        $('.navi_1 .services-table-content-navigation_item:first-of-type').addClass('navigation-active');
         $('.services-table-title:eq(0)').addClass('services-table-title-active');
 
         $('.services-table-title').on('click', function () {
